--- a/Scrollbar/Base.lproj/Main.storyboard
+++ b/Scrollbar/Base.lproj/Main.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +11,98 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Scrollbar" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SZ8-b8-twa">
+                                <rect key="frame" x="16" y="187" width="361" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="gE1-QF-Wln"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="84z-o9-Y8j">
+                                <rect key="frame" x="16" y="283" width="361" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="1nF-mH-a0E"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="d8l-Ei-t8U">
+                                <rect key="frame" x="0.0" y="635" width="393" height="217"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" horizontalCompressionResistancePriority="753" verticalCompressionResistancePriority="754" translatesAutoresizingMaskIntoConstraints="NO" id="tWH-6l-7rA">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="153"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sbr-Fq-p7f">
+                                                <rect key="frame" x="16" y="16" width="361" height="21"/>
+                                                <fontDescription key="fontDescription" name="Impact" family="Impact" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" image="square.and.arrow.up.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="YBi-gR-mRY">
+                                                <rect key="frame" x="16" y="54.000000000000007" width="84" height="82.666666666666686"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="84" id="Hes-jf-7bi"/>
+                                                    <constraint firstAttribute="width" constant="84" id="YhY-K2-A2v"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="sbr-Fq-p7f" secondAttribute="trailing" constant="16" id="MMQ-hT-VwE"/>
+                                            <constraint firstItem="YBi-gR-mRY" firstAttribute="leading" secondItem="tWH-6l-7rA" secondAttribute="leading" constant="16" id="gFs-ES-ZGm"/>
+                                            <constraint firstItem="YBi-gR-mRY" firstAttribute="top" secondItem="sbr-Fq-p7f" secondAttribute="bottom" constant="16" id="q2v-bU-lDi"/>
+                                            <constraint firstAttribute="bottom" secondItem="YBi-gR-mRY" secondAttribute="bottom" constant="16" id="tVu-ao-bLM"/>
+                                            <constraint firstItem="sbr-Fq-p7f" firstAttribute="leading" secondItem="tWH-6l-7rA" secondAttribute="leading" constant="16" id="weS-JW-nSm"/>
+                                            <constraint firstItem="sbr-Fq-p7f" firstAttribute="top" secondItem="tWH-6l-7rA" secondAttribute="top" constant="16" id="xi4-Q8-ChD"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="tWH-6l-7rA" firstAttribute="top" secondItem="d8l-Ei-t8U" secondAttribute="top" constant="50" id="JES-HJ-sfS"/>
+                                    <constraint firstAttribute="trailing" secondItem="tWH-6l-7rA" secondAttribute="trailing" id="KaZ-Z5-fn2"/>
+                                    <constraint firstItem="tWH-6l-7rA" firstAttribute="top" relation="greaterThanOrEqual" secondItem="d8l-Ei-t8U" secondAttribute="top" priority="750" constant="50" id="aTO-ju-zLG"/>
+                                    <constraint firstAttribute="bottom" secondItem="tWH-6l-7rA" secondAttribute="bottom" id="bOM-HA-q1G"/>
+                                    <constraint firstItem="tWH-6l-7rA" firstAttribute="leading" secondItem="d8l-Ei-t8U" secondAttribute="leading" id="qs7-Y2-TiD"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.74308123045394592" green="1" blue="0.75587123438362469" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="tWH-6l-7rA" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="0ES-jG-w8O"/>
+                            <constraint firstItem="SZ8-b8-twa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="6Qu-Bc-sOR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d8l-Ei-t8U" secondAttribute="trailing" id="Fan-lg-Vxf"/>
+                            <constraint firstItem="d8l-Ei-t8U" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GBg-K4-TN3"/>
+                            <constraint firstItem="84z-o9-Y8j" firstAttribute="top" secondItem="SZ8-b8-twa" secondAttribute="bottom" constant="48" id="LkS-Cg-7DQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SZ8-b8-twa" secondAttribute="trailing" constant="16" id="POO-vJ-0oT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="84z-o9-Y8j" secondAttribute="trailing" constant="16" id="XAX-dd-tQ6"/>
+                            <constraint firstAttribute="bottom" secondItem="d8l-Ei-t8U" secondAttribute="bottom" id="Yee-gh-LrP"/>
+                            <constraint firstItem="84z-o9-Y8j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ZFI-Rq-DPQ"/>
+                            <constraint firstItem="84z-o9-Y8j" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="224" id="b1V-GT-XHf"/>
+                            <constraint firstItem="SZ8-b8-twa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="128" id="gIm-dI-fjG"/>
+                            <constraint firstItem="d8l-Ei-t8U" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="576" id="njy-OU-3br"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="contentView" destination="tWH-6l-7rA" id="Z4K-gR-vau"/>
+                        <outlet property="scrollVIew" destination="d8l-Ei-t8U" id="nVP-XT-eZ1"/>
+                        <outlet property="textLabel" destination="sbr-Fq-p7f" id="zi9-BD-aLf"/>
+                        <outlet property="topScrollView" destination="njy-OU-3br" id="zBs-sa-32j"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="3.8167938931297707" y="-27.464788732394368"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="square.and.arrow.up.circle.fill" catalog="system" width="128" height="123"/>
+    </resources>
 </document>
